--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,23 @@
 </head>
 
 <body>
+
+
+  <dialog id="dialog" class="mdl-dialog">
+    <h3 class="mdl-dialog__title">Shimmer generator</h3>
+    <div class="mdl-dialog__content">
+      <p>
+        This is a simple shimmer generator
+      </p>
+    </div>
+    <div class="mdl-dialog__actions">
+      <button type="button" class="mdl-button">Close</button>      
+    </div>
+  </dialog>
+
+
   <div class="container">
-    <section class="settings">      
+    <section class="settings">
       <div class="mdl-tabs__tab-bar">
         <div class="mdl-tabs__tab">Shimmer #1 settings</div>
       </div>
@@ -86,16 +101,27 @@
       <div class="global__input-group">
         <label for="" class="global__label">Shade 2</label>
         <input class="mdl-slider mdl-js-slider global__input" type="range" min="0" max="100" value="0" tabindex="0">
-      </div>      
+      </div>
       <div class="global__input-group">
         <label for="" class="global__label">Shade 3</label>
         <input class="mdl-slider mdl-js-slider global__input" type="range" min="0" max="100" value="0" tabindex="0">
       </div>
       <div class="global__input-group">
         <label for="" class="global__label">Shade 4</label>
-        <input class="mdl-slider mdl-js-slider global__input" type="range" min="0" max="100" value="0" tabindex="0">  
+        <input class="mdl-slider mdl-js-slider global__input" type="range" min="0" max="100" value="0" tabindex="0">
+      </div>
+      <div class="global__input-group">
+        <label for="" class="global__label">Animation speed</label>
+        <input id="speedRangeSlider" class="mdl-slider mdl-js-slider global__input" type="range" min="0" max="100"
+          value="10" tabindex="0">
       </div>
     </section>
+  </div>
+  <button id="help" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored help-btn dialog-button">
+    <i class="material-icons">help</i>
+  </button>
+  <div class="mdl-tooltip" data-mdl-for="help">
+    Need help?
   </div>
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </body>
