added range sliders for shades

--- a/src/index.html
+++ b/src/index.html
@@ -120,6 +120,10 @@
         <input id="speedRangeSlider" class="mdl-slider mdl-js-slider global__input" type="range" min="0" max="100"
           value="50" tabindex="0">
       </div>
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label settings__input">
+        <input class="mdl-textfield__input" type="text" id="color1" />
+        <label class="mdl-textfield__label" for="color1">Color 1</label>
+      </div>
     </section>
   </div>
   <button id="help"
