added inputs for colors

--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,7 @@
       </div>
       <div class="global__input-group">
         <label for="shade1" class="global__label">Shade 1</label>
-        <input id="shade1RangeSlider" class="mdl-slider mdl-js-slider global__input" type="range" min="0" max="100" value="0" tabindex="0">
+        <input id="shade1RangeSlider" class="mdl-slider mdl-js-slider global__input" type="range" min="0" max="100" value="20" tabindex="0">
       </div>
       <div class="global__input-group">
         <label for="shade2" class="global__label">Shade 2</label>
@@ -121,8 +121,20 @@
           value="50" tabindex="0">
       </div>
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label settings__input">
-        <input class="mdl-textfield__input" type="text" id="color1" />
+        <input id='colorInput1' class="mdl-textfield__input" value="#f6f7f8" type="text" id="color1" />
         <label class="mdl-textfield__label" for="color1">Color 1</label>
+      </div>
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label settings__input">
+        <input id='colorInput2' class="mdl-textfield__input" value="#edeef1" type="text" id="color2" />
+        <label class="mdl-textfield__label" for="color2">Color 2</label>
+      </div>
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label settings__input">
+        <input id='colorInput3' class="mdl-textfield__input" value="#f6f7f8" type="text" id="color3" />
+        <label class="mdl-textfield__label" for="color3">Color 3</label>
+      </div>
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label settings__input">
+        <input id='colorInput4' class="mdl-textfield__input" value="#f6f7f8" type="text" id="color4" />
+        <label class="mdl-textfield__label" for="color4">Color 4</label>
       </div>
     </section>
   </div>
