added selected shimmer input handlers

--- a/src/index.html
+++ b/src/index.html
@@ -34,19 +34,24 @@
   <div class="container">
     <section class="settings">
       <div class="mdl-tabs__tab-bar">
-        <div class="mdl-tabs__tab">Shimmer #1 settings</div>
+        <div class="mdl-tabs__tab">Shimmer settings</div>
       </div>
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label settings__input">
-        <input class="mdl-textfield__input" type="number" id="width" />
-        <label class="mdl-textfield__label" for="width">Width</label>
+        <input class="mdl-textfield__input" type="number" id="selectedShimmerWidth" value="300" />
+        <label class="mdl-textfield__label" for="selectedShimmerWidth">Width</label>
       </div>
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label settings__input">
-        <input class="mdl-textfield__input" type="number" id="height" />
-        <label class="mdl-textfield__label" for="height">Height</label>
+        <input class="mdl-textfield__input" type="number" id="selectedShimmerHeight" value="200" />
+        <label class="mdl-textfield__label" for="selectedShimmerHeight">Height</label>
       </div>
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label settings__input">
-        <input class="mdl-textfield__input" type="number" id="marginTop" />
-        <label class="mdl-textfield__label" for="marginTop">Margin Top</label>
+        <input class="mdl-textfield__input" type="number" id="selectedShimmerMarginTop" value="10" />
+        <label class="mdl-textfield__label" for="selectedShimmerMarginTop">Margin Top</label>
+      </div>
+      <div>
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+          Remove
+        </button>
       </div>
     </section>
     <section class="preview">
@@ -55,11 +60,11 @@
           <div class="mdl-tabs__tab">Preview</div>
         </div>
         <div class="shimmers"></div>
-        <button id="tt1"
+        <button id="add-shimmer-tooltip"
           class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored preview__add-btn">
           <i class="material-icons">add</i>
         </button>
-        <div class="mdl-tooltip" data-mdl-for="tt1">
+        <div class="mdl-tooltip" data-mdl-for="add-shimmer-tooltip">
           New shimmer
         </div>
       </div>
@@ -101,19 +106,23 @@
       </div>
       <div class="global__input-group">
         <label for="shade1" class="global__label">Shade 1</label>
-        <input id="shade1RangeSlider" class="mdl-slider mdl-js-slider global__input" type="range" min="0" max="100" value="20" tabindex="0">
+        <input id="shade1RangeSlider" class="mdl-slider mdl-js-slider global__input" type="range" min="0" max="100"
+          value="20" tabindex="0">
       </div>
       <div class="global__input-group">
         <label for="shade2" class="global__label">Shade 2</label>
-        <input id="shade2RangeSlider" class="mdl-slider mdl-js-slider global__input" type="range" min="0" max="100" value="20" tabindex="0">
+        <input id="shade2RangeSlider" class="mdl-slider mdl-js-slider global__input" type="range" min="0" max="100"
+          value="20" tabindex="0">
       </div>
       <div class="global__input-group">
         <label for="shade3" class="global__label">Shade 3</label>
-        <input id="shade3RangeSlider" class="mdl-slider mdl-js-slider global__input" type="range" min="0" max="100" value="40" tabindex="0">
+        <input id="shade3RangeSlider" class="mdl-slider mdl-js-slider global__input" type="range" min="0" max="100"
+          value="40" tabindex="0">
       </div>
       <div class="global__input-group">
         <label for="shade4" class="global__label">Shade 4</label>
-        <input id="shade4RangeSlider" class="mdl-slider mdl-js-slider global__input" type="range" min="0" max="100" value="100" tabindex="0">
+        <input id="shade4RangeSlider" class="mdl-slider mdl-js-slider global__input" type="range" min="0" max="100"
+          value="100" tabindex="0">
       </div>
       <div class="global__input-group">
         <label for="animation-duration" class="global__label">Animation duration</label>
