added html output for copying

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
             <a href="#css-panel" class="mdl-tabs__tab">CSS</a>
           </div>
           <div class="mdl-tabs__panel is-active" id="html-panel">
-            <pre>
+            <pre class="mdl-shadow--3dp">
             <ul>
               <li>Eddard</li>
               <li>Catelyn</li>
@@ -88,7 +88,7 @@
           </pre>
           </div>
           <div class="mdl-tabs__panel" id="css-panel">
-            <pre>
+            <pre class="mdl-shadow--3dp">
             <ul>
               <li>Tywin</li>
               <li>Cersei</li>
